<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sesion05</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email or Username</string>
    <string name="password">Password</string>
    <string name="forgot">forgot password</string>
    <string name="login">LOGIN</string>
    <string name="signin">Sign in with\n Google</string>
    <string name="promise">On-Premise\n Login</string>

</resources>
